fix overflow issue. update mobile spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,10 +39,19 @@
       background: #fff;
       box-shadow: 2px 3px 8px 0 rgba(0,0,0,0.08);
     }
+    .contentMobile {
+      padding: 1.5em;
+    }
       .appWrapper {
         margin-top: 2em;
         display: flex;
         justify-content: space-between;
+        height: 80vh;
+      }
+      .appWrapperMobile {
+        margin-top: 2em;
+        display: flex;
+        justify-content: center;
         height: 80vh;
       }
         .search {
@@ -62,11 +71,14 @@
           box-shadow: 2px 3px 8px 0 rgba(0,0,0,0.08);
           border: #e8e8e8 solid 1px;
         }
+        .resultMobile {
+          width: 100%;
+          overflow: hidden;
+          overflow-y: auto;
+          box-shadow: 2px 3px 8px 0 rgba(0,0,0,0.08);
+          border: #e8e8e8 solid 1px;
+        }
 
-/* .switch-wrapper {
-  position: relative;
-  border:red solid 2px;
-} */
 .switch-wrapper > div {
   position: absolute;
 }
